# algebra-lab

./: README.md  mypy.ini  pyproject.toml
src/algebra_lab/: __init__.py  polynomial.py
tests/: test_polynomial.py
