[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algebra_lab"
version = "0.1"
description = "A tiny algebra library with polynomial arithmetic."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Zain Hafiz" }
]

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/algebra_lab"]